--- a/css/style.css
+++ b/css/style.css
@@ -1595,6 +1595,12 @@ body {
   display: flex;
 }
 
+@media (max-width: 1160px) {
+  .item-card-catalog:nth-child(3) {
+    display: none;
+  }
+}
+
 .main-cart {
   margin-bottom: 0;
 }
