--- a/css/_cart.scss
+++ b/css/_cart.scss
@@ -207,3 +207,115 @@
         padding-left:26px;
     }
 }
+@media (max-width: $tablet-wrap-jump) {
+    .cart-items {
+        width: 100%;
+    }
+    .payment-page-wrap {
+        display: flex;
+        flex-direction: column;
+    }
+    .cart-items__control-buttons{
+        margin-right: 48px;
+        &-block {
+            justify-content: center;
+        }
+    }
+    .checkout-block {
+        flex-direction: row;
+        margin-top: 64px;
+        width: 100%;
+        justify-content: space-between;
+        &__payment-info {
+            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            width: 360px;
+        }
+        &__process-purchase {
+            margin-top: 39px;
+        }
+        &_inputs {
+            &:last-child {
+                width: 101px;
+            }
+            box-sizing: border-box;
+            width: 100%;
+        }
+    }
+}
+@media (max-width: $mobile-wrap-jump) {
+    .checkout-block {
+        flex-direction: column;
+        margin-top: 48px;
+        &__payment-info {
+            margin-bottom: 48px;
+        }
+        &__process-purchase {
+            margin-top: 0;
+            margin-bottom: 96px;
+        }
+    }
+    .payment-page {
+        padding-top: 39px;
+        padding-bottom: 0;
+    }
+    .cart-items__control-buttons {
+        &-block {
+            justify-content: space-between;
+        }
+        width: 175px;
+        font-size: 12px;
+        line-height: 14px;
+        height: 33px;
+        margin-right: 0;
+    }
+    .cart-items__item-card {
+        &:nth-child(1) {
+            margin-bottom: 32px;
+        }
+        &:nth-child(2) {
+            margin-bottom: 30px;
+        }
+        &_image {
+            width: 144px;
+            height: 188px;
+        }
+        &__info {
+            padding-left: 17px;
+            padding-top: 13px;
+            &_text {
+                font-size: 14px;
+                line-height: 17px;
+                &_quainity {
+                    margin-left: 15px;
+                    width: 24px;
+                    text-align: center;
+                }
+            }
+            &_title {
+                font-size: 14px;
+                line-height: 17px;
+            }
+            &_option-element {
+                margin-bottom: 6px;
+                font-size: 14px;
+                line-height: 17px;
+            }
+            &_delete-button {
+                right: 12px;
+                top: 17px;
+                & svg {
+                    width: 9px;
+                    height: 11px;
+                }
+            }
+        }
+        &__info_name {
+            font-size: 16px;
+            line-height: 19px;
+            width: 143px;
+            margin-bottom: 26px;
+        }
+    }
+}
