--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ body {
 
 @media (max-width: 784px) {
   .wrap {
-    max-width: 343px;
+    max-width: 360px;
   }
   .card-block {
     padding-bottom: 24px;
@@ -2031,6 +2031,141 @@ body {
   line-height: 19px;
   color: #F16D7F;
   padding-left: 26px;
+}
+
+@media (max-width: 1160px) {
+  .cart-items {
+    width: 100%;
+  }
+  .payment-page-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .cart-items__control-buttons {
+    margin-right: 48px;
+  }
+  .cart-items__control-buttons-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .checkout-block {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 64px;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .checkout-block__payment-info {
+    margin-bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 360px;
+  }
+  .checkout-block__process-purchase {
+    margin-top: 39px;
+  }
+  .checkout-block_inputs {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 100%;
+  }
+  .checkout-block_inputs:last-child {
+    width: 101px;
+  }
+}
+
+@media (max-width: 784px) {
+  .checkout-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 48px;
+  }
+  .checkout-block__payment-info {
+    margin-bottom: 48px;
+  }
+  .checkout-block__process-purchase {
+    margin-top: 0;
+    margin-bottom: 96px;
+  }
+  .payment-page {
+    padding-top: 39px;
+    padding-bottom: 0;
+  }
+  .cart-items__control-buttons {
+    width: 175px;
+    font-size: 12px;
+    line-height: 14px;
+    height: 33px;
+    margin-right: 0;
+  }
+  .cart-items__control-buttons-block {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .cart-items__item-card:nth-child(1) {
+    margin-bottom: 32px;
+  }
+  .cart-items__item-card:nth-child(2) {
+    margin-bottom: 30px;
+  }
+  .cart-items__item-card_image {
+    width: 144px;
+    height: 188px;
+  }
+  .cart-items__item-card__info {
+    padding-left: 17px;
+    padding-top: 13px;
+  }
+  .cart-items__item-card__info_text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .cart-items__item-card__info_text_quainity {
+    margin-left: 15px;
+    width: 24px;
+    text-align: center;
+  }
+  .cart-items__item-card__info_title {
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .cart-items__item-card__info_option-element {
+    margin-bottom: 6px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  .cart-items__item-card__info_delete-button {
+    right: 12px;
+    top: 17px;
+  }
+  .cart-items__item-card__info_delete-button svg {
+    width: 9px;
+    height: 11px;
+  }
+  .cart-items__item-card__info_name {
+    font-size: 16px;
+    line-height: 19px;
+    width: 143px;
+    margin-bottom: 26px;
+  }
 }
 
 .registration-page {
