--- a/css/_registration.scss
+++ b/css/_registration.scss
@@ -1,5 +1,5 @@
 .registration-page {
-    padding-bottom: 128px;
+    padding-bottom:96px;
     padding-top: 96px;
 }
 .registration-page-wrap {
@@ -25,7 +25,7 @@
         font-weight: 300;
         font-size: 13px;
         line-height: 16px;
-        height: 35px;
+        height: 45px;
         width: 360px;
         padding-left: 17.24px;
         &:focus {
@@ -45,6 +45,9 @@
             color: #000000;
             padding-left: 10px;
             margin-right: 20px;
+            &:last-child {
+                display: none;
+            }
         }
     }
     &_password-notificator {
@@ -63,6 +66,9 @@
             padding-left: 20px;
         }
     }
+}
+#Other {
+    display: none;
 }
 
 .benefits-block {
@@ -83,6 +89,57 @@
         &_subitem {
             padding-left: 23px;
             margin-bottom: 16px;
+        }
+    }
+}
+@media (max-width: $tablet-wrap-jump) {
+    .registration-form {
+        display: flex;
+        flex-direction: column;
+        width: 360px;
+        box-sizing: border-box;
+        margin-right: 0;
+        &_inputs {
+            box-sizing: border-box;
+        }
+        &__gender {
+            &_article:last-child {
+                display: inline;
+            }
+        }
+    }
+    .benefits-block {
+        width: 354px;
+        &_desk {
+            margin-bottom: 22px;
+        }
+        &_title {
+            margin-bottom: 32px;
+        }
+        & p {
+            font-size: 16px;
+            line-height: 19px;
+        }
+        & li {
+            font-size: 16px;
+            line-height: 19px;
+        }
+    }
+
+    #Other {
+        display: inline;
+    }
+}
+@media (max-width: $mobile-wrap-jump) {
+    .registration-page {
+        padding-top: 40px;
+        &-wrap {
+            flex-direction: column;
+        }
+    }
+    .registration-form {
+        &-submit-button {
+            margin-bottom: 40px;
         }
     }
 }
