--- a/css/_catalog.scss
+++ b/css/_catalog.scss
@@ -12,6 +12,7 @@
     font-size: 24px;
     line-height: 29px;
     align-self: center;
+    font-weight: normal;
 }
 .map-item {
     font-weight: 300;
