--- a/css/style.css
+++ b/css/style.css
@@ -1356,6 +1356,7 @@ body {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  font-weight: normal;
 }
 
 .map-item {
