--- a/css/common/_header.scss
+++ b/css/common/_header.scss
@@ -37,28 +37,28 @@
                 }
             }
         }
-    }
-    .header_wrap {
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        width: 100%;
-    }
-    .header-svg-color {
-        fill: #E8E8E8
-    }
-    .header-links:hover .header-svg-color{
-        fill: $pink_color;
-        @include link(unset)
-    }
-    .header-links {
-        width: min-content;
-        &_burger-button {
-            background-color: unset;
-            border: none;
-        }
-        &:last-child {
+        &_wrap {
+            display: flex;
+            justify-content: space-between;
             position: relative;
+            width: 100%;
+        }
+        &-svg-color {
+            fill: #E8E8E8
+        }
+        &-links {
+            width: min-content;
+            &_burger-button {
+                background-color: unset;
+                border: none;
+            }
+            &:last-child {
+                position: relative;
+            }
+            &:hover .header-svg-color{
+                fill: $pink_color;
+                @include link(unset)
+            }
         }
     }
     .burger-trigger {
@@ -83,7 +83,7 @@
 
     .burger-opened {
         position: absolute;
-        right: calc(50% - 232px - 2px - 1140px / 2);
+        right: 0; //calc(50% - 232px - 2px - 1140px / 2);
                 // половина ширины экрана - ширина бургера - 2px margin'a бургера - половина врапа
         top: 74px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -160,11 +160,11 @@
         border: $pink-color 1px solid;
         border-radius: 3px;
     }
-    @media (max-width: $desktop-wrap + ($burger-width * 2)){
-        .burger-opened {
-            right: 0;
-        }
-    }
+    // @media (max-width: $desktop-wrap + ($burger-width * 2)){
+    //     .burger-opened {
+    //         right: 0;
+    //     }
+    // }
     @media (max-width: $mobile-wrap-jump) {
         .header {
             &-right {
