delete excess img, fix mobile wrap, rename img folders

--- a/css/_cart.scss
+++ b/css/_cart.scss
@@ -269,6 +269,7 @@
         line-height: 14px;
         height: 33px;
         margin-right: 0;
+        color: #575757;
     }
     .cart-items__item-card {
         &:nth-child(1) {
