--- a/css/common/_header.scss
+++ b/css/common/_header.scss
@@ -173,7 +173,7 @@
                 display: none;
             }
             &_wrap {
-                padding: 16px;
+                padding: 8px 0;
             }
         }
         .mobile-burger {
