--- a/css/style.css
+++ b/css/style.css
@@ -454,8 +454,7 @@ body {
 
 @media (max-width: 767px) {
   .wrap {
-    max-width: 375px;
-    padding: 0 8px;
+    max-width: 359px;
   }
   .card-block {
     padding-bottom: 24px;
@@ -796,7 +795,7 @@ body {
     display: none;
   }
   .header_wrap {
-    padding: 16px;
+    padding: 8px 0;
   }
   .mobile-burger {
     display: -webkit-box;
@@ -1601,10 +1600,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 17px;
-  margin-left: 17px;
-  margin-top: 24px;
-  margin: 24px  0 24px 17px;
+  margin: 24px 0 24px 17px;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -1615,15 +1611,11 @@ body {
 }
 
 .filter-box {
-  margin: 27px 0;
+  margin: 18px 0;
 }
 
 .filter-box:last-child {
   margin: 0;
-}
-
-.filter-category-box {
-  margin: 16px 0;
 }
 
 .label-checkbox {
@@ -1731,25 +1723,36 @@ body {
   .menu-svg-margin {
     -webkit-transform: scale(2);
             transform: scale(2);
+    margin-left: 10px;
   }
   .content-filter {
-    margin: 26px auto 41px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 24px;
+    height: 25px;
+    margin-bottom: 32px;
   }
   .catalog-filters {
     width: 260px;
+    right: 0;
   }
   .filter-box-menu {
-    margin-left: -24px;
+    left: 0;
+    margin-left: -4px;
+    margin-top: -8px;
+    padding: 16px 16px 16px 4px;
   }
   .text-decor-catalog {
     font-size: 12px;
     line-height: 14px;
   }
-  .menu-box-opened {
-    width: 360px;
-  }
   .card-block .item-card-catalog {
     margin-right: 0;
+  }
+  .filter-box:first-child {
+    margin-top: 24px;
   }
 }
 
