--- a/css/common/_common-styles.scss
+++ b/css/common/_common-styles.scss
@@ -3,6 +3,14 @@
     padding: 0;
     margin: 0;
 }
+input { //border radius
+    -webkit-border-radius: 0; 
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+details > summary::-webkit-details-marker { //details marker
+    display: none;
+}
 // Центрирование, Wrapper
 .wrap {
     max-width: 1140px;
